tooltip fix to stop it going off-screen or causing scroll bars to increase, and tooltip help hints

--- a/src/sanity.css
+++ b/src/sanity.css
@@ -26,11 +26,11 @@ td.showSanityText span {
 }
 
 td.dontShowSanityText span {
-    display: none;
+    display: inline;
 }
 
 td.showSanityText div {
-    display: none;
+    display: block;
 }
 
 td.value {
